--- a/AuthServer/IdentityServer/AuthServer.Host/appsettings.json
+++ b/AuthServer/IdentityServer/AuthServer.Host/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=ABP;Trusted_Connection=True;TrustServerCertificate=True;"
+    "Default": "Server=10.221.128.160;Database=Abp_micro_base;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
   },
   "CorsOrigins": "http://localhost:9527,http://localhost:44307",
   "ElasticSearch": {
