--- a/MicroServices/AAA/host/AAA.HttpApi.Host/appsettings.json
+++ b/MicroServices/AAA/host/AAA.HttpApi.Host/appsettings.json
@@ -9,6 +9,9 @@
   "Redis": {
     "Configuration": "127.0.0.1"
   },
+  "ElasticSearch": {
+    "Url": "http://localhost:9200"
+  },
   "AuthServer": {
     "Authority": "http://localhost:53362",
     "RequireHttpsMetadata": "false",
@@ -24,7 +27,7 @@
   "IdentityClients": {
     "Default": {
       "GrantType": "client_credentials",
-      "ClientId": "business-app",
+      "ClientId": "aaa-app",
       "ClientSecret": "1q2w3e*",
       "Authority": "http://localhost:53362",
       "Scope": "InternalGateway BaseService"
