config gateway add new project

--- a/Gateways/WebAppGateway/WebAppGateway.Host/appsettings.json
+++ b/Gateways/WebAppGateway/WebAppGateway.Host/appsettings.json
@@ -106,7 +106,7 @@
       "UpstreamHttpMethod": [ "Put", "Delete", "Get", "Post" ]
     },
     {
-      "DownstreamPathTemplate": "/api/aaa/{everything}",
+      "DownstreamPathTemplate": "/api/app/{everything}",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
@@ -114,7 +114,7 @@
           "Port": 44308
         }
       ],
-      "UpstreamPathTemplate": "/api/aaa/{everything}",
+      "UpstreamPathTemplate": "/api/app/{everything}",
       "UpstreamHttpMethod": [ "Put", "Delete", "Get", "Post" ]
     }
   ]
