--- a/MicroServices/PeBusiness/host/PeBusiness.HttpApi.Host/appsettings.json
+++ b/MicroServices/PeBusiness/host/PeBusiness.HttpApi.Host/appsettings.json
@@ -3,16 +3,22 @@
     "CorsOrigins": "https://*.PeBusiness.com,http://localhost:4200,http://localhost:44307,https://localhost:44307"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=PeBusiness_Main;Trusted_Connection=True;TrustServerCertificate=True",
-    "PeBusiness": "Server=(LocalDb)\\MSSQLLocalDB;Database=PeBusiness_Module;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=10.221.128.160;Database=Abp_micro_base;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;",
+    "PeBusiness": "Server=10.221.128.160;Database=Abp_micro_PeBusiness;Password=Siplace.1;User ID=sa;TrustServerCertificate=True"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
   },
   "AuthServer": {
-    "Authority": "https://localhost:44376/",
+    "Authority": "http://localhost:53362",
     "RequireHttpsMetadata": "false",
     "SwaggerClientId": "PeBusiness_Swagger",
     "SwaggerClientSecret": "1q2w3e*"
+  },
+  "RemoteServices": {
+    "Default": {
+      "BaseUrl": "http://localhost:59682/",
+      "UseCurrentAccessToken": "false"
+    }
   }
 }
