modify launch options

--- a/MicroServices/PeBusiness/host/PeBusiness.HttpApi.Host/Properties/launchSettings.json
+++ b/MicroServices/PeBusiness/host/PeBusiness.HttpApi.Host/Properties/launchSettings.json
@@ -15,9 +15,9 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "PeBusiness.DemoApp": {
+    "PeBusiness.Host": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "http://localhost:44351",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
