--- a/MicroServices/PeBusiness/src/PeBusiness.Application/PeBusiness.Application.csproj
+++ b/MicroServices/PeBusiness/src/PeBusiness.Application/PeBusiness.Application.csproj
@@ -1,17 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="..\..\common.props" />
+	<Import Project="..\..\common.props" />
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>PeBusiness</RootNamespace>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<RootNamespace>PeBusiness</RootNamespace>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Volo.Abp.AutoMapper" Version="7.0.1" />
-    <PackageReference Include="Volo.Abp.Ddd.Application" Version="7.0.1" />
-    <ProjectReference Include="..\PeBusiness.Application.Contracts\PeBusiness.Application.Contracts.csproj" />
-    <ProjectReference Include="..\PeBusiness.Domain\PeBusiness.Domain.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
+		<PackageReference Include="Volo.Abp.AutoMapper" Version="7.0.1" />
+		<PackageReference Include="Volo.Abp.Ddd.Application" Version="7.0.1" />
+		<ProjectReference Include="..\PeBusiness.Application.Contracts\PeBusiness.Application.Contracts.csproj" />
+		<ProjectReference Include="..\PeBusiness.Domain\PeBusiness.Domain.csproj" />
+	</ItemGroup>
 
 </Project>
