modify up down path

--- a/Gateways/WebAppGateway/WebAppGateway.Host/appsettings.json
+++ b/Gateways/WebAppGateway/WebAppGateway.Host/appsettings.json
@@ -106,7 +106,7 @@
       "UpstreamHttpMethod": [ "Put", "Delete", "Get", "Post" ]
     },
     {
-      "DownstreamPathTemplate": "/api/app/{everything}",
+      "DownstreamPathTemplate": "/api/aaa/{everything}",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
