--- a/Gateways/WebAppGateway/WebAppGateway.Host/appsettings.json
+++ b/Gateways/WebAppGateway/WebAppGateway.Host/appsettings.json
@@ -128,6 +128,18 @@
       ],
       "UpstreamPathTemplate": "/api/PeBusiness/{everything}",
       "UpstreamHttpMethod": [ "Put", "Delete", "Get", "Post" ]
+    },
+    {
+      "DownstreamPathTemplate": "/api/ec/{everything}",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "localhost",
+          "Port": 8000
+        }
+      ],
+      "UpstreamPathTemplate": "/api/ec/{everything}",
+      "UpstreamHttpMethod": [ "Put", "Delete", "Get", "Post" ]
     }
   ]
 }
