--- a/Gateways/WebAppGateway/WebAppGateway.Host/appsettings.json
+++ b/Gateways/WebAppGateway/WebAppGateway.Host/appsettings.json
@@ -134,11 +134,23 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "localhost",
-          "Port": 8000
+          "Host": "10.221.128.160/",
+          "Port": 8051
         }
       ],
       "UpstreamPathTemplate": "/api/ec/{everything}",
+      "UpstreamHttpMethod": [ "Put", "Delete", "Get", "Post" ]
+    },
+    {
+      "DownstreamPathTemplate": "/api/pj/{everything}",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "10.221.128.160/",
+          "Port": 8051
+        }
+      ],
+      "UpstreamPathTemplate": "/api/pj/{everything}",
       "UpstreamHttpMethod": [ "Put", "Delete", "Get", "Post" ]
     }
   ]
