--- a/BaseService/BaseService.Host/appsettings.json
+++ b/BaseService/BaseService.Host/appsettings.json
@@ -3,7 +3,7 @@
     "Authority": "http://localhost:53362"
   },
   "App": {
-    "CorsOrigins": "http://localhost:9527,http://localhost:44307"
+    "CorsOrigins": "http://localhost:9527,http://localhost:44307,http://localhost:55389"
   },
   "ConnectionStrings": {
         "Default": "Server=10.221.128.160;Database=Abp_micro_base;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
