--- a/AuthServer/IdentityServer/AuthServer.Host/appsettings.Development.json
+++ b/AuthServer/IdentityServer/AuthServer.Host/appsettings.Development.json
@@ -1,9 +1,29 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=10.221.128.160;Database=Abp_micro_base;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
+  },
+  "CorsOrigins": "http://localhost:9527,http://localhost:44307,http://localhost:51186,http://localhost:44308,http://localhost:44351",
+  "ElasticSearch": {
+    "Url": "http://localhost:9200"
+  },
+  "Redis": {
+    "Configuration": "127.0.0.1"
+  },
+  "RabbitMQ": {
+    "Connections": {
+      "Default": {
+        "HostName": "localhost"
+      }
+    },
+    "EventBus": {
+      "ClientName": "MsDemo_AuthServer",
+      "ExchangeName": "MsDemo"
+    }
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
