--- a/Gateways/WebAppGateway/WebAppGateway.Host/appsettings.json
+++ b/Gateways/WebAppGateway/WebAppGateway.Host/appsettings.json
@@ -1,11 +1,11 @@
 {
   "RemoteServices": {
     "Default": {
-      "BaseUrl": "http://localhost:62162/"
+      "BaseUrl": "http://10.221.128.160:62162/"
     }
   },
   "App": {
-    "CorsOrigins": "http://localhost:9527/,http://localhost:8900/"
+    "CorsOrigins": "http://10.221.128.160:9527/,http://10.221.128.160:8900/"
   },
   "ConnectionStrings": {
         "Default": "Server=10.221.128.160;Database=Abp_micro_base;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
@@ -15,10 +15,10 @@
     "Configuration": "127.0.0.1"
   },
   "ElasticSearch": {
-    "Url": "http://localhost:9200"
+    "Url": "http://10.221.128.160:9200"
   },
   "AuthServer": {
-    "Authority": "http://localhost:53362"
+    "Authority": "http://10.221.128.160:53362"
   },
   "Routes": [
     {
@@ -26,7 +26,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "localhost",
+          "Host": "10.221.128.160",
           "Port": 55389
         }
       ],
@@ -38,7 +38,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "localhost",
+          "Host": "10.221.128.160",
           "Port": 55389
         }
       ],
@@ -50,7 +50,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "localhost",
+          "Host": "10.221.128.160",
           "Port": 55389
         }
       ],
@@ -62,7 +62,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "localhost",
+          "Host": "10.221.128.160",
           "Port": 55389
         }
       ],
@@ -74,7 +74,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "localhost",
+          "Host": "10.221.128.160",
           "Port": 55389
         }
       ],
@@ -86,7 +86,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "localhost",
+          "Host": "10.221.128.160",
           "Port": 55389
         }
       ],
@@ -98,7 +98,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "localhost",
+          "Host": "10.221.128.160",
           "Port": 51186
         }
       ],
@@ -110,7 +110,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "localhost",
+          "Host": "10.221.128.160",
           "Port": 44308
         }
       ],
@@ -122,7 +122,7 @@
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
-          "Host": "localhost",
+          "Host": "10.221.128.160",
           "Port": 44351
         }
       ],
