--- a/WebApp/vue/.env.production
+++ b/WebApp/vue/.env.production
@@ -1,11 +1,18 @@
 # just a flag
 ENV = 'production'
 
+# # base api
+# VUE_APP_BASE_API = 'http://microserverappgateway.domain.com'
+# # authserver api
+# VUE_APP_AUTHSERVER_API= 'http://microserverauth.domain.com'
+
+# # app_storage_api
+# VUE_APP_STORAGE_API= 'microserverfilestorage.domain.com'
+
 # base api
-VUE_APP_BASE_API = 'http://microserverappgateway.domain.com'
+VUE_APP_BASE_API = 'http://10.221.128.160:62162'
 # authserver api
-VUE_APP_AUTHSERVER_API= 'http://microserverauth.domain.com'
+VUE_APP_AUTHSERVER_API= 'http://10.221.128.160:53362'
 
 # app_storage_api
-VUE_APP_STORAGE_API= 'microserverfilestorage.domain.com'
-
+VUE_APP_STORAGE_API= 'http://10.221.128.160:59958'
