--- a/.gitignore
+++ b/.gitignore
@@ -5,16 +5,16 @@
 /.vs
 /AuthServer/AuthServer.Host/node_modules
 /AuthServer/AuthServer.Host/.vs/AuthServer.Host
-/AuthServer/AuthServer.Host/bin/Debug/netcoreapp3.1
+/AuthServer/AuthServer.Host/bin/
 /AuthServer/AuthServer.Host/Logs
 /AuthServer/AuthServer.Host/obj
-/IdentityService/IdentityService.Host/bin/Debug/netcoreapp3.1
+/IdentityService/IdentityService.Host/bin/
 /IdentityService/IdentityService.Host/.vs/IdentityService.Host/v16
 /IdentityService/IdentityService.Host/Logs
 /IdentityService/IdentityService.Host/obj
 /IdentityService/IdentityService.Host/.vs/IdentityService.Host/DesignTimeBuild
 /TenantService/TenantService.Host/.vs/TenantService.Host
-/TenantService/TenantService.Host/bin/Debug/netcoreapp3.1
+/TenantService/TenantService.Host/bin/
 /TenantService/TenantService.Host/Logs
 /TenantService/TenantService.Host/obj
 /MicroServices/Business/.vs/Business/v16
@@ -27,15 +27,15 @@
 /MicroServices/Business/Business.EntityFrameworkCore/bin/Debug
 /MicroServices/Business/Business.EntityFrameworkCore/obj
 /MicroServices/Business/Business.Host/obj
-/MicroServices/Business/Business.HttpApi/bin/Debug/netcoreapp3.1
+/MicroServices/Business/Business.HttpApi/bin/
 /MicroServices/Business/Business.HttpApi/obj
-/MicroServices/Business/Business.HttpApi.Client/bin/Debug/netcoreapp3.1
+/MicroServices/Business/Business.HttpApi.Client/bin/
 /MicroServices/Business/Business.HttpApi.Client/obj
 /MicroServices/Business/.vs/Business/DesignTimeBuild
-/MicroServices/Business/Business.Host/bin/Debug/netcoreapp3.1
+/MicroServices/Business/Business.Host/bin/
 /MicroServices/Business/Business.Host/Logs
 /Gateways/WebAppGateway/.vs/WebAppGateway
-/Gateways/WebAppGateway/WebAppGateway.Host/bin/Debug/netcoreapp3.1
+/Gateways/WebAppGateway/WebAppGateway.Host/bin/
 /Gateways/WebAppGateway/WebAppGateway.Host/Logs
 /Gateways/WebAppGateway/WebAppGateway.Host/obj
 /MicroServices/Business/.vs/Business/config
@@ -43,19 +43,19 @@
 /AuthServer/AuthServer.Host/publish
 /MicroServices/Business/Business.Host/publish
 /Gateways/InternalGateway/.vs/InternalGateway
-/Gateways/InternalGateway/InternalGateway.Host/bin/Debug/netcoreapp3.1
+/Gateways/InternalGateway/InternalGateway.Host/bin/
 /Gateways/InternalGateway/InternalGateway.Host/Logs
 /Gateways/InternalGateway/InternalGateway.Host/obj
 /BaseService/.vs
-/BaseService/BaseService.Application/bin/Debug/netcoreapp3.1
+/BaseService/BaseService.Application/bin/
 /BaseService/BaseService.Application/obj
-/BaseService/BaseService.Application.Contracts/bin/Debug/netcoreapp3.1
+/BaseService/BaseService.Application.Contracts/bin/
 /BaseService/BaseService.Application.Contracts/obj
-/BaseService/BaseService.Domain/bin/Debug/netcoreapp3.1
+/BaseService/BaseService.Domain/bin/
 /BaseService/BaseService.Domain/obj
-/BaseService/BaseService.EntityFrameworkCore/bin/Debug/netcoreapp3.1
+/BaseService/BaseService.EntityFrameworkCore/bin/
 /BaseService/BaseService.EntityFrameworkCore/obj
-/BaseService/BaseService.Host/bin/Debug/netcoreapp3.1
+/BaseService/BaseService.Host/bin/
 /BaseService/BaseService.Host/Logs
 /BaseService/BaseService.Host/obj
 /AbpModules/Identity/Volo.Abp.Identity.Application/bin/Debug/netstandard2.0
@@ -68,15 +68,15 @@
 /AbpModules/Identity/Volo.Abp.Identity.Domain.Shared/obj
 /AbpModules/Identity/Volo.Abp.Identity.EntityFrameworkCore/bin/Debug/netstandard2.0
 /AbpModules/Identity/Volo.Abp.Identity.EntityFrameworkCore/obj
-/AbpModules/Identity/Volo.Abp.Identity.HttpApi/bin/Debug/netcoreapp3.1
+/AbpModules/Identity/Volo.Abp.Identity.HttpApi/bin/
 /AbpModules/Identity/Volo.Abp.Identity.HttpApi/obj
 /AbpModules/Identity/Volo.Abp.PermissionManagement.Domain.Identity/bin/Debug/netstandard2.0
 /AbpModules/Identity/Volo.Abp.PermissionManagement.Domain.Identity/obj
 /AuthServer/.vs
-/BaseService/BaseService.HttpApi/bin/Debug/netcoreapp3.1
+/BaseService/BaseService.HttpApi/bin/
 /BaseService/BaseService.HttpApi/obj
 /BaseService/BaseService.HttpApi.Client/obj
-/BaseService/BaseService.HttpApi.Client/bin/Debug/netcoreapp3.1
+/BaseService/BaseService.HttpApi.Client/bin/
 /AbpModules/Identity/Volo.Abp.Identity.Application/bin/Debug
 /AbpModules/Identity/Volo.Abp.Identity.Application.Contracts/bin/Debug
 /AbpModules/Identity/Volo.Abp.Identity.Domain/bin/Debug
@@ -94,7 +94,7 @@
 /MicroServices/FileSystem/FileSystem.Domain/obj
 /MicroServices/FileSystem/FileSystem.EntityFrameworkCore/bin/Debug/netstandard2.0
 /MicroServices/FileSystem/FileSystem.EntityFrameworkCore/obj
-/MicroServices/FileSystem/FileSystem.Host/bin/Debug/netcoreapp3.1
+/MicroServices/FileSystem/FileSystem.Host/bin/
 /MicroServices/FileSystem/FileSystem.Host/obj
 /MicroServices/FileSystem/FileSystem.Host/Logs
 /MicroServices/FileSystem/FileSystem.Application/bin/Release/netstandard2.0
@@ -111,7 +111,7 @@
 /MicroServices/FileStorage/FileStorage.Domain/obj
 /MicroServices/FileStorage/FileStorage.EntityFrameworkCore/bin/Debug/netstandard2.0
 /MicroServices/FileStorage/FileStorage.EntityFrameworkCore/obj
-/MicroServices/FileStorage/FileStorage.Host/bin/Debug/netcoreapp3.1
+/MicroServices/FileStorage/FileStorage.Host/bin/
 /MicroServices/FileStorage/FileStorage.Host/obj
 /MicroServices/FileStorage/FileStorage.Host/Logs
 /AuthServer/AuthServer.Host/bin/Debug/net5.0
@@ -194,4 +194,10 @@
 /Gateways/InternalGateway/InternalGateway.Host/bin/Debug/net7.0
 /AuthServer/OpenIddict/AuthServer.Host/bin/Debug/net7.0
 /MicroServices/FileStorage/FileStorage.Host/wwwroot
+/Publish
 
+AuthServer/IdentityServer/AuthServer.Host/bin/
+MicroServices/FileStorage/FileStorage.Application.Contracts/bin/
+MicroServices/FileStorage/FileStorage.Application/bin/
+MicroServices/FileStorage/FileStorage.Domain/bin/
+MicroServices/FileStorage/FileStorage.EntityFrameworkCore/bin/
