--- a/BaseService/BaseService.Host/appsettings.Development.json
+++ b/BaseService/BaseService.Host/appsettings.Development.json
@@ -1,9 +1,24 @@
 {
+  "AuthServer": {
+    "Authority": "http://localhost:53362"
+  },
+  "App": {
+    "CorsOrigins": "http://localhost:9527,http://localhost:44307,http://localhost:55389"
+  },
+  "ConnectionStrings": {
+    "Default": "Server=10.221.128.160;Database=Abp_micro_base;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
+
+  },
+  "ElasticSearch": {
+    "Url": "http://localhost:9200"
+  },
+  "Redis": {
+    "Configuration": "127.0.0.1"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
