--- a/MicroServices/FileStorage/FileStorage.Host/appsettings.Development.json
+++ b/MicroServices/FileStorage/FileStorage.Host/appsettings.Development.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "App": {
+    "CorsOrigins": "http://localhost:9527"
+  },
+  "ConnectionStrings": {
+    "Default": "Server=10.221.128.160;Database=Abp_micro_base;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;",
+    "FileStorage": "Server=10.221.128.160;Database=Abp_micro_file;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
+  },
+  "Redis": {
+    "Configuration": "127.0.0.1"
+  },
+  "AuthServer": {
+    "Authority": "http://localhost:53362"
   }
 }
