--- a/Gateways/WebAppGateway/WebAppGateway.Host/appsettings.json
+++ b/Gateways/WebAppGateway/WebAppGateway.Host/appsettings.json
@@ -130,7 +130,7 @@
       "UpstreamHttpMethod": [ "Put", "Delete", "Get", "Post" ]
     },
     {
-      "DownstreamPathTemplate": "/api/ec/{everything}",
+      "DownstreamPathTemplate": "/api/launch/{everything}",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
@@ -138,7 +138,7 @@
           "Port": 8051
         }
       ],
-      "UpstreamPathTemplate": "/api/ec/{everything}",
+      "UpstreamPathTemplate": "/api/launch/{everything}",
       "UpstreamHttpMethod": [ "Put", "Delete", "Get", "Post" ]
     },
     {
