multiple environment config

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,4 @@ MicroServices/FileStorage/FileStorage.EntityFrameworkCore/bin/
 /MicroServices/Business/Business.Domain/bin
 /MicroServices/Business/Business.EntityFrameworkCore/bin
 /MicroServices/Business/Business.Host/wwwroot
+/MicroServices/AAA/host/AAA.HttpApi.Host/Logs
