--- a/BaseService/BaseService.Host/appsettings.Development.json
+++ b/BaseService/BaseService.Host/appsettings.Development.json
@@ -6,8 +6,7 @@
     "CorsOrigins": "http://localhost:9527,http://localhost:44307,http://localhost:55389"
   },
   "ConnectionStrings": {
-    "Default": "Server=10.221.128.160;Database=Abp_micro_base;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
-
+    "Default": "Server=10.221.128.160;Database=Abp_micro_base_dev;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
   },
   "ElasticSearch": {
     "Url": "http://localhost:9200"
