--- a/MicroServices/AAA/host/AAA.HttpApi.Host/appsettings.Development.json
+++ b/MicroServices/AAA/host/AAA.HttpApi.Host/appsettings.Development.json
@@ -3,8 +3,8 @@
     "CorsOrigins": "https://*.AAA.com,http://localhost:9527,http://localhost:44307,https://localhost:44307"
   },
   "ConnectionStrings": {
-    "Default": "Server=10.221.128.160;Database=Abp_micro_base;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;",
-    "AAA": "Server=10.221.128.160;Database=Abp_micro_aaa;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
+    "Default": "Server=10.221.128.160;Database=Abp_micro_base_dev;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;",
+    "AAA": "Server=10.221.128.160;Database=Abp_micro_aaa_dev;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
