--- a/MicroServices/AAA/host/AAA.HttpApi.Host/appsettings.production.json
+++ b/MicroServices/AAA/host/AAA.HttpApi.Host/appsettings.production.json
@@ -20,8 +20,8 @@
   },
   "RemoteServices": {
     "Default": {
-      "BaseUrl": "http://10.221.128.160:59682/",
-      "UseCurrentAccessToken": "false"
+      "BaseUrl": "http://10.221.128.160:55389/",
+      "UseCurrentAccessToken": "True"
     }
   },
   "IdentityClients": {
@@ -37,5 +37,12 @@
   "Hangfire": {
     "Login": "admin",
     "Password": "abc123"
+  },
+  "exportSetting": {
+    "TemplatePath": "ExcelTemplate"
+  },
+  "ServerConfigre": {
+    "FileServerHost": "http://10.221.128.160:59958",
+    "FrontEndHost": "http://10.221.128.160:9527"
   }
 }
