--- a/MicroServices/Business/Business.Host/appsettings.Production.json
+++ b/MicroServices/Business/Business.Host/appsettings.Production.json
@@ -1,23 +1,23 @@
 {
   "App": {
-    "CorsOrigins": "https://*.abc.com,http://localhost:9527"
+    "CorsOrigins": "https://*.abc.com,http://10.221.128.160:9527"
   },
   "ConnectionStrings": {
-    "Default": "Server=10.221.128.160;Database=Abp_micro_base_dev;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;",
-    "Business": "Server=10.221.128.160;Database=Abp_micro_business_dev;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
+    "Default": "Server=10.221.128.160;Database=Abp_micro_base;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;",
+    "Business": "Server=10.221.128.160;Database=Abp_micro_business;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
   },
   "ElasticSearch": {
-    "Url": "http://localhost:9200"
+    "Url": "http://10.221.128.160:9200"
   },
   "AuthServer": {
-    "Authority": "http://localhost:53362"
+    "Authority": "http://10.221.128.160:53362"
   },
   "RemoteServices": {
     "Default": {
-      "BaseUrl": "http://localhost:59682/",
+      "BaseUrl": "http://10.221.128.160:59682/",
       "UseCurrentAccessToken": "false"
     }
   },
@@ -26,7 +26,7 @@
       "GrantType": "client_credentials",
       "ClientId": "business-app",
       "ClientSecret": "1q2w3e*",
-      "Authority": "http://localhost:53362",
+      "Authority": "http://10.221.128.160:53362",
       "Scope": "InternalGateway BaseService"
     }
   },
