--- a/AuthServer/IdentityServer/AuthServer.Host/appsettings.Production.json
+++ b/AuthServer/IdentityServer/AuthServer.Host/appsettings.Production.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=10.221.128.160;Database=Abp_micro_base_dev;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
+    "Default": "Server=10.221.128.160;Database=Abp_micro_base;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
   },
-  "CorsOrigins": "http://localhost:9527,http://localhost:44307,http://localhost:51186,http://localhost:44308,http://localhost:44351",
+  "CorsOrigins": "http://10.221.128.160:9527,http://10.221.128.160:44307,http://10.221.128.160:51186,http://10.221.128.160:44308,http://10.221.128.160:44351",
   "ElasticSearch": {
-    "Url": "http://localhost:9200"
+    "Url": "http://10.221.128.160:9200"
   },
   "Redis": {
     "Configuration": "127.0.0.1"
@@ -12,7 +12,7 @@
   "RabbitMQ": {
     "Connections": {
       "Default": {
-        "HostName": "localhost"
+        "HostName": "10.221.128.160"
       }
     },
     "EventBus": {
