--- a/AuthServer/IdentityServer/AuthServer.Host/appsettings.json
+++ b/AuthServer/IdentityServer/AuthServer.Host/appsettings.json
@@ -1,29 +1,79 @@
 {
-  "ConnectionStrings": {
-    "Default": "Server=10.221.128.160;Database=Abp_micro_base;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
+  "StringEncryption": {
+    "DefaultPassPhrase": "s46c5q55nxpeS8Ra",
+    "InitVectorBytes": "s83ng0abvd02js84",
+    "DefaultSalt": "sf&5)s3#"
   },
-  "CorsOrigins": "http://localhost:9527,http://localhost:44307,http://localhost:51186,http://localhost:44308,http://localhost:44351,http://10.221.128.160:9527,http://10.221.128.160:44307,http://10.221.128.160:51186,http://10.221.128.160:44308,http://10.221.128.160:44351",
-  "ElasticSearch": {
-    "Url": "http://localhost:9200"
+  "Json": {
+    "OutputDateTimeFormat": "yyyy-MM-dd HH:mm:ss",
+    "InputDateTimeFormats": [
+      "yyyy-MM-dd HH:mm:ss",
+      "yyyy-MM-ddTHH:mm:ss"
+    ]
   },
-  "Redis": {
-    "Configuration": "127.0.0.1"
-  },
-  "RabbitMQ": {
-    "Connections": {
-      "Default": {
-        "HostName": "localhost"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "System": "Warning",
+        "Microsoft": "Warning",
+        "DotNetCore": "Information"
       }
     },
-    "EventBus": {
-      "ClientName": "MsDemo_AuthServer",
-      "ExchangeName": "MsDemo"
-    }
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Enrich": [ "FromLogContext", "WithProcessId", "WithThreadId", "WithEnvironmentName", "WithMachineName", "WithApplicationName", "WithUniqueId" ],
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "restrictedToMinimumLevel": "Debug",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] [{SourceContext}] [{ProcessId}] [{ThreadId}] - {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/Debug-.log",
+          "restrictedToMinimumLevel": "Debug",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] [{SourceContext}] [{ProcessId}] [{ThreadId}] - {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/Info-.log",
+          "restrictedToMinimumLevel": "Information",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] [{SourceContext}] [{ProcessId}] [{ThreadId}] - {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/Warn-.log",
+          "restrictedToMinimumLevel": "Warning",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] [{SourceContext}] [{ProcessId}] [{ThreadId}] - {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/Error-.log",
+          "restrictedToMinimumLevel": "Error",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] [{SourceContext}] [{ProcessId}] [{ThreadId}] - {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/Fatal-.log",
+          "restrictedToMinimumLevel": "Fatal",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] [{SourceContext}] [{ProcessId}] [{ThreadId}] - {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
+  }
 }
