--- a/MicroServices/Business/Business.Host/appsettings.json
+++ b/MicroServices/Business/Business.Host/appsettings.json
@@ -1,38 +1,79 @@
 {
-  "App": {
-    "CorsOrigins": "https://*.abc.com,http://localhost:9527"
+  "StringEncryption": {
+    "DefaultPassPhrase": "s46c5q55nxpeS8Ra",
+    "InitVectorBytes": "s83ng0abvd02js84",
+    "DefaultSalt": "sf&5)s3#"
   },
-  "ConnectionStrings": {
-    "Default": "Server=10.221.128.160;Database=Abp_micro_base;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;",
-    "Business": "Server=10.221.128.160;Database=Abp_micro_business;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
+  "Json": {
+    "OutputDateTimeFormat": "yyyy-MM-dd HH:mm:ss",
+    "InputDateTimeFormats": [
+      "yyyy-MM-dd HH:mm:ss",
+      "yyyy-MM-ddTHH:mm:ss"
+    ]
   },
-  "Redis": {
-    "Configuration": "127.0.0.1"
-  },
-  "ElasticSearch": {
-    "Url": "http://localhost:9200"
-  },
-  "AuthServer": {
-    "Authority": "http://localhost:53362"
-  },
-  "RemoteServices": {
-    "Default": {
-      "BaseUrl": "http://localhost:59682/",
-      "UseCurrentAccessToken": "false"
-    }
-  },
-  "IdentityClients": {
-    "Default": {
-      "GrantType": "client_credentials",
-      "ClientId": "business-app",
-      "ClientSecret": "1q2w3e*",
-      "Authority": "http://localhost:53362",
-      "Scope": "InternalGateway BaseService"
-    }
-  },
-  "UseSwagger": "false",
-  "Hangfire": {
-    "Login": "admin",
-    "Password": "abc123"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "System": "Warning",
+        "Microsoft": "Warning",
+        "DotNetCore": "Information"
+      }
+    },
+    "Enrich": [ "FromLogContext", "WithProcessId", "WithThreadId", "WithEnvironmentName", "WithMachineName", "WithApplicationName", "WithUniqueId" ],
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "restrictedToMinimumLevel": "Debug",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] [{SourceContext}] [{ProcessId}] [{ThreadId}] - {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/Debug-.log",
+          "restrictedToMinimumLevel": "Debug",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] [{SourceContext}] [{ProcessId}] [{ThreadId}] - {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/Info-.log",
+          "restrictedToMinimumLevel": "Information",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] [{SourceContext}] [{ProcessId}] [{ThreadId}] - {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/Warn-.log",
+          "restrictedToMinimumLevel": "Warning",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] [{SourceContext}] [{ProcessId}] [{ThreadId}] - {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/Error-.log",
+          "restrictedToMinimumLevel": "Error",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] [{SourceContext}] [{ProcessId}] [{ThreadId}] - {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/Fatal-.log",
+          "restrictedToMinimumLevel": "Fatal",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u3}] [{SourceContext}] [{ProcessId}] [{ThreadId}] - {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
   }
 }
