--- a/MicroServices/FileStorage/FileStorage.Host/appsettings.Production.json
+++ b/MicroServices/FileStorage/FileStorage.Host/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "App": {
-    "CorsOrigins": "http://localhost:9527,http://10.221.128.160:9527/"
+    "CorsOrigins": "http://10.221.128.160:9527,http://10.221.128.160:9527/"
   },
   "ConnectionStrings": {
     "Default": "Server=10.221.128.160;Database=Abp_micro_base;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;",
@@ -10,6 +10,6 @@
     "Configuration": "127.0.0.1"
   },
   "AuthServer": {
-    "Authority": "http://localhost:53362"
+    "Authority": "http://10.221.128.160:53362"
   }
 }
