remove unuse using

--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,4 @@ MicroServices/FileStorage/FileStorage.EntityFrameworkCore/bin/
 /MicroServices/Business/Business.EntityFrameworkCore/bin
 /MicroServices/Business/Business.Host/wwwroot
 /MicroServices/AAA/host/AAA.HttpApi.Host/Logs
+document/~$Problem Solving_ A3 Structure_Template_02_20230704.xlsx
