--- a/AuthServer/IdentityServer/AuthServer.Host/appsettings.Development.json
+++ b/AuthServer/IdentityServer/AuthServer.Host/appsettings.Development.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "Default": "Server=10.221.128.160;Database=Abp_micro_base_dev;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
   },
-  "CorsOrigins": "http://localhost:9527,http://localhost:44307,http://localhost:51186,http://localhost:44308,http://localhost:44351",
+  "CorsOrigins": "http://localhost:9527,http://localhost:44307,http://localhost:51186,http://localhost:44308,http://localhost:44351,http://localhost:44309",
   "ElasticSearch": {
     "Url": "http://localhost:9200"
   },
