--- a/AuthServer/IdentityServer/AuthServer.Host/appsettings.Production.json
+++ b/AuthServer/IdentityServer/AuthServer.Host/appsettings.Production.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "Default": "Server=10.221.128.160;Database=Abp_micro_base;Password=Siplace.1;User ID=sa;TrustServerCertificate=True;"
   },
-  "CorsOrigins": "http://10.221.128.160:9527,http://10.221.128.160:44307,http://10.221.128.160:51186,http://10.221.128.160:44308,http://10.221.128.160:44351",
+  "CorsOrigins": "http://10.221.128.160:9527,http://10.221.128.160:44307,http://10.221.128.160:51186,http://10.221.128.160:44309,http://10.221.128.160:44308,http://10.221.128.160:44351",
   "ElasticSearch": {
     "Url": "http://10.221.128.160:9200"
   },
