--- a/Gateways/WebAppGateway/WebAppGateway.Host/appsettings.Development.json
+++ b/Gateways/WebAppGateway/WebAppGateway.Host/appsettings.Development.json
@@ -152,6 +152,18 @@
       ],
       "UpstreamPathTemplate": "/api/pj/{everything}",
       "UpstreamHttpMethod": [ "Put", "Delete", "Get", "Post" ]
+    },
+    {
+      "DownstreamPathTemplate": "/api/FeedBack/{everything}",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "localhost",
+          "Port": 44309
+        }
+      ],
+      "UpstreamPathTemplate": "/api/FeedBack/{everything}",
+      "UpstreamHttpMethod": [ "Put", "Delete", "Get", "Post" ]
     }
   ]
 }
