--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,9 @@ MicroServices/FileStorage/FileStorage.EntityFrameworkCore/bin/
 /MicroServices/Business/Business.Host/wwwroot
 /MicroServices/AAA/host/AAA.HttpApi.Host/Logs
 document/~$Problem Solving_ A3 Structure_Template_02_20230704.xlsx
+/MicroServices/Business
+/MicroServices/Feedback_Worker/src/FeedbackWorkerService/bin/
+
+*.dll
+*.pdb
+/MicroServices/Feedback_Worker/src/FeedbackWorkerService/bin
