--- a/MicroServices/FeedBack/host/FeedBack.HttpApi.Host/appsettings.json
+++ b/MicroServices/FeedBack/host/FeedBack.HttpApi.Host/appsettings.json
@@ -15,12 +15,23 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "System": "Warning",
-        "Microsoft": "Warning",
-        "DotNetCore": "Information"
+        "Microsoft": "Information",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore": "Information",
+        "Microsoft.EntityFrameworkCore": "Warning",
+        "System": "Information",
+        "System.Net.Http.HttpClient": "Information"
       }
     },
-    "Enrich": [ "FromLogContext", "WithProcessId", "WithThreadId", "WithEnvironmentName", "WithMachineName", "WithApplicationName", "WithUniqueId" ],
+    "Enrich": [
+      "FromLogContext",
+      "WithProcessId",
+      "WithThreadId",
+      "WithEnvironmentName",
+      "WithMachineName",
+      "WithApplicationName",
+      "WithUniqueId"
+    ],
     "WriteTo": [
       {
         "Name": "Console",
