--- a/MicroServices/Feedback_Worker/src/FeedbackWorkerService/FeedbackWorkerService.csproj
+++ b/MicroServices/Feedback_Worker/src/FeedbackWorkerService/FeedbackWorkerService.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <OutputType>Exe</OutputType>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>true</SelfContained> <!-- 可选，如果你想发布为独立可执行文件 -->
+    <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
+    <EnableWindowsService>true</EnableWindowsService> <!-- 关键 -->
     <UserSecretsId>dotnet-FeedbackWorkerService-c003614c-9194-4002-83cd-30036774aa59</UserSecretsId>
   </PropertyGroup>
 
@@ -12,12 +18,14 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="7.0.1" />
     <PackageReference Include="volo.abp.autofac" Version="7.0.1" />
     <PackageReference Include="volo.abp.http.client.identitymodel" Version="7.0.1" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="7.0.1" />
   </ItemGroup>
 
   <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
       <PackageReference Include="Serilog.Extensions.Hosting" Version="4.2.0" />
       <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
+      <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
       <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
       <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
